# agent-jeeves

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  seed.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  main.py  models.py  schemas.py
backend/app/mcp/: server.py
backend/app/routers/: indexing.py  query.py  update.py
backend/app/services/: background.py  embedding.py  github_client.py  query_engine.py  repo_analyzer.py
backend/tests/: test_embedding.py  test_github_client.py  test_import.py  test_repo_analyzer.py  test_schemas.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/lib/: api.ts
frontend/src/lib/components/: ChatInput.svelte  ChatMessage.svelte  SetupFlow.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/setup/: +page.svelte
