[project]
name = "agent-jeeves"
version = "0.1.0"
description = "Code knowledge base for multi-repository organizations"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "chromadb>=0.6",
    "mcp[cli]>=1.0",
    "tree-sitter>=0.24",
    "tree-sitter-languages>=1.10",
    "bcrypt>=4.2",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"
