[project]
name = "agent-jeeves"
version = "0.1.0"
description = "Code knowledge base for multi-repository organizations"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.2",
    "uvicorn[standard]==0.42.0",
    "sqlalchemy[asyncio]==2.0.48",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    "pydantic-settings==2.13.1",
    "httpx==0.28.1",
    "chromadb==1.5.5",
    "mcp[cli]==1.26.0",
    "bcrypt==5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
